# homework19.2

./: README.md  catalog.json  group.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_preview.py  0003_alter_blog_slug.py  0004_alter_blog_preview.py  0005_alter_blog_preview.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_rename_date_creation_product_created_at_and_more.py  0004_alter_category_options_alter_product_options_and_more.py  0004_product_manufactured_at.py  0005_alter_product_preview.py  0006_alter_product_preview.py  0007_alter_product_created_at_alter_product_updated_at.py  0008_version.py  0009_alter_version_product.py  0010_product_owner.py
catalog/templates/: base.html  contacts.html  home.html  product_detail.html  products_list.html
catalog/templates/catalog/: base.html  category_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_remove_user_username.py
users/templates/: login.html
users/templates/users/: user_form.html  user_profile.html
(+1 files in other folders)
